--- a/app/assets/scss/components/_sa-navbar.scss
+++ b/app/assets/scss/components/_sa-navbar.scss
@@ -5,7 +5,9 @@ $sa-navbar-bg:    $client;
 $navbar-sard-toggler-icon-bg:       str-replace(url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='white' stroke-width='2.5' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"), "#", "%23") ;
 
 // Base styles
-
+.navbar.fixed-top{
+  z-index: 2000;
+}
 /* change the background color */
 .navbar-sard {
     background-color: $sa-navbar-bg;
